...
                VStack {
                    Rectangle()
                        .frame(width: 350, height: 350)
                        .hidden()
                    
                    NavigationLink(destination: MainMenuView()) {
                        Text("Start Game")
                            .fontWeight(.bold)
                            .foregroundColor(.white)
                            .modifier(RectangleWrapper(fixedHeight: 50, color: .blue, opacity: 1.0))
                            .frame(width: 250)
                    }
                    .padding(.top)
...
