...
                            .aspectRatio(1.0, contentMode: .fill)
                        
                        VStack(alignment: .leading, spacing: -10) {
                            Text("75%")
                                .font(.system(size: 120))
                                .fontWeight(.heavy)
                            Text("Gallery Completion")
                                .font(.system(size: 40))
                                .fontWeight(.bold)
                        }
                        
                        Text("~")
                            .font(.system(size: 120))
...
